--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Sinsle - Site Navigation</title>
-<meta name="description" content="Sinsle,个人主页," />
+<title>狐狸的网址导航</title>
+<meta name="description" content="狐狸,导航" />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link href="css/style.css?001" rel="stylesheet" />
 
@@ -11,13 +11,13 @@
 <body>
 <!--*******************Head*******************-->
 <div class="head">
-<div class="logo"><a href="/">Sinsle</a></div>
+<div class="logo"><a href="/">狐狸导航</a></div>
 <div class="custom">
 <ul>
-<li><a href="http://www.baidu.com">未知</a></li>
-<li><a href="http://www.baidu.com">未知</a></li>
-<li><a href="http://www.baidu.com">未知</a></li>
-<li><a href="http://www.baidu.com">未知</a></li>
+<li><a href="http://www.baidu.com">狐狸</a></li>
+<li><a href="http://www.baidu.com">狐狸</a></li>
+<li><a href="http://www.baidu.com">狐狸</a></li>
+<li><a href="http://www.baidu.com">狐狸</a></li>
 </ul>	
 </div>
 </div>
@@ -50,15 +50,15 @@
 <div class="caption"></div><div class="caption"></div>
 <div class="site">
 <ul>
-<li><a href="https://shimo.im" target="_blank">石墨文档</a></li>
-<li><a href="http://translate.google.cn" target="_blank">谷歌翻译</a></li>
-<li><a href="http://fanyi.baidu.com" target="_blank">百度翻译</a></li>
 <li><a href="http://sdsp.ipinyou.com" target="_blank">品友大算盘</a></li>
+<li><a href="http://www.ipinyou.com" target="_blank">品友官网</a></li>
 <li><a href="http://www.baidu.com" target="_blank">未知</a></li>
 <li><a href="http://www.baidu.com" target="_blank">未知</a></li>
-<li><a href="http://tool.lu" target="_blank">在线工具</a></li>
-<li><a href="http://report.ptengine.cn" target="_blank">PtEngine</a></li>
-<li><a href="http://cn.office-converter.com" target="_blank">在线文件转换</a></li>
+<li><a href="http://www.baidu.com" target="_blank">未知</a></li>
+<li><a href="http://www.baidu.com" target="_blank">未知</a></li>
+<li><a href="http://tool.lu" target="_blank">未知</a></li>
+<li><a href="http://www.baidu.com" target="_blank">未知</a></li>
+<li><a href="http://www.baidu.com" target="_blank">未知</a></li>
 </ul>
 </div>
 </div>
