--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <!--*******************Head*******************-->
 <div class="head">
-<div class="logo"><a href="/">狐狸导航</a></div>
+<div class="logo"><a href="/">狐狸</a></div>
 <div class="custom">
 <ul>
 <li><a href="http://www.baidu.com">狐狸</a></li>
